--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                     </li>
                     <li><a href="#">Our Food</a></li>
                     <li><a href="#">Ingredients</a></li>
-                    <li><a href="#">Studies</a></li>
+                    <li><a href="#">Delievry</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
