--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         </header>
     
         <main>
-            <h1>Your cat will go <img src="bonkers.svg" alt="Text that say bonkers"></h1>
+            <h1> <img src="bonkers.svg" alt="Text that say bonkers"></h1>
             <p class="subhead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa porro corporis omnis in fuga iure ea autem dolor, tempore natus aliquam amet! Cupiditate delectus commodi, pariatur ipsa quia inventore. Quid</p>
             <a href="#" class="primary-cta">Get Bonkers</a>
         </main>
