--- a/home.html
+++ b/home.html
@@ -39,13 +39,13 @@
         </header>
     
         <main>
-            <h1> <img src="bonkers.svg" alt="Text that say bonkers"></h1>
+            <h1>Your cat will go <img src="bonkers.svg" alt="Text that say bonkers"></h1>
             <p class="subhead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ipsa porro corporis omnis in fuga iure ea autem dolor, tempore natus aliquam amet! Cupiditate delectus commodi, pariatur ipsa quia inventore. Quid</p>
             <a href="#" class="primary-cta">Get Bonkers</a>
         </main>
         <div class="cat-container">
             <div class="cat">
-                
+                <img src="cat.png" alt="Cat illustration">
             </div>
             <div class="inner-circle"></div>
             <div class="outer-circle"></div>
